--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>React App</title>
-  <meta name="description" content="A high-quality React application for managing timers and notes with a sleek and user-friendly interface." />
+  <meta name="description" content="An app that helps artists track the time spent on edits. The app allows you to set temporary checkpoints with the option to sign them." />
 </head>
 <body>
   <div id="root"></div>
