--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<!-- <html lang="en"> -->
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>React App</title>
+  <title>Potato</title>
   <meta name="description" content="An app that helps artists track the time spent on edits. The app allows you to set temporary checkpoints with the option to sign them." />
 </head>
 <body>
   <div id="root"></div>
-  <script type="module" src="/src/main.jsx"></script>
+  <script type="module" src="/src/App.jsx"></script>
 </body>
 </html>
