--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Potato</title>
   <meta name="description" content="An app that helps artists track the time spent on edits. The app allows you to set temporary checkpoints with the option to sign them." />
+  <link rel="icon" href="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/svg/1f954.svg" type="image/svg+xml" />
 </head>
 <body>
   <div id="root"></div>
